Adicionando Dockerfile ao projeto